<?xml version="1.0" encoding="utf-8"?>
<com.games.memorygame.ui.widget.DataContainerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/data_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    tools:context=".ui.board.BoardActivity">

    <TextView
        android:id="@+id/first_player_score"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:textColor="@color/selector"
        tools:text="Player 1: 30"/>

    <TextView
        android:id="@+id/second_player_score"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:textColor="@color/selector"
        android:visibility="gone"
        tools:text="Player 2: 40"/>

    <TextView
        android:id="@+id/timer"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:text="20"/>

    <com.games.memorygame.ui.widget.BoardView
        android:id="@+id/board_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/first_player_score"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp" />


</com.games.memorygame.ui.widget.DataContainerLayout>